--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,10 +1,9 @@
-FROM python:3.10
+FROM mcr.microsoft.com/vscode/devcontainers/python:3.10
 
 COPY requirements.txt /tmp/
 RUN pip install --no-cache-dir -r /tmp/requirements.txt
+RUN pip install black
 
 COPY app.py /app/
 
 WORKDIR /app
-
-CMD ["streamlit", "run", "app.py", "--browser.serverAddress='0.0.0.0'"]
